--- a/SECB/app/src/main/res/layout-ar/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/news_filter_screen.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,172 +10,186 @@
         android:id="@+id/layout_dark_layer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/shadow"
         android:clickable="true"
-        android:orientation="vertical">
+        android:orientation="vertical"></LinearLayout>
 
-    </LinearLayout>
-    <LinearLayout
+    <ScrollView
         android:id="@+id/filter_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/news_list_recycler_heigth"
         android:layout_alignParentBottom="true"
         android:background="@drawable/filter_bg"
-        android:orientation="vertical"
-        android:clickable="true"
-        android:padding="@dimen/news_filter_padding">
+        android:fillViewport="true">
 
-        <!--time title-->
-        <TextView
-            android:id="@+id/txtv_news_filter_time_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/filter_time"
-            android:textColor="@color/secb_light_text"
-            android:textSize="@dimen/news_filter_btn_text_size"
-            android:textStyle="bold" />
-
-        <!--time input-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:clickable="true"
             android:orientation="vertical"
             android:padding="@dimen/news_filter_padding">
-            <!--from title-->
+
+            <!--time title-->
             <TextView
-                android:id="@+id/txtv_news_filter_time_from_title"
+                android:id="@+id/txtv_news_filter_time_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/filter_time_from"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/news_filter_text_size" />
+                android:text="@string/filter_time"
+                android:textColor="@color/secb_light_text"
+                android:textSize="@dimen/news_filter_btn_text_size"
+                android:textStyle="bold" />
 
-            <!--from value-->
-            <TextView
-                android:id="@+id/txtv_news_filter_time_from_value"
+            <!--time input-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:maxLines="1"
-                android:drawableRight="@drawable/date_picker_icon"
-                android:textColor="@color/secb_grey_text"
-                android:hint="@string/hint_date"
-                android:textSize="@dimen/news_filter_text_size" />
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="@dimen/news_filter_padding">
+                <!--from title-->
+                <TextView
+                    android:id="@+id/txtv_news_filter_time_from_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/filter_time_from"
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:visibility="gone" />
 
-            <!--to-->
+                <!--from value-->
+                <TextView
+                    android:id="@+id/txtv_news_filter_time_from_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/date_picker_icon"
+                    android:hint="@string/filter_time_from"
+                    android:maxLines="1"
+                    android:text=""
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
+
+                <!--to-->
+                <TextView
+                    android:id="@+id/txtv_news_filter_time_to_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/news_filter_padding"
+                    android:text="@string/filter_time_to"
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/news_filter_text_size"
+                    android:visibility="gone" />
+
+                <!--to value-->
+                <TextView
+                    android:id="@+id/txtv_news_filter_time_to_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableRight="@drawable/date_picker_icon"
+                    android:hint="@string/filter_time_to"
+                    android:maxLines="1"
+                    android:text=""
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
+
+
+            </LinearLayout>
+
+            <!--types title-->
             <TextView
-                android:id="@+id/txtv_news_filter_time_to_title"
+                android:id="@+id/txtv_news_filter_type_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/news_filter_padding"
-                android:text="@string/filter_time_to"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/news_filter_text_size" />
+                android:text="@string/filter_type"
+                android:textColor="@color/secb_light_text"
+                android:textSize="@dimen/news_filter_btn_text_size"
+                android:textStyle="bold" />
 
-            <!--to value-->
-            <TextView
-                android:id="@+id/txtv_news_filter_time_to_value"
+            <!--types input-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:hint="@string/hint_date"
-                android:maxLines="1"
-                android:drawableRight="@drawable/date_picker_icon"
-                android:textColor="@color/secb_grey_text"
-                android:textSize="@dimen/news_filter_text_size" />
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:padding="@dimen/news_filter_padding">
+
+                <RadioGroup
+                    android:id="@+id/radgro_newsTypes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:id="@+id/radbtn_allTypes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:button="@null"
+                        android:drawableRight="@drawable/radio_btn"
+                        android:text="@string/news_filter_all_types"
+                        android:textColor="@color/secb_grey_text"
+                        android:textSize="@dimen/news_filter_text_size" />
+
+                    <RadioButton
+                        android:id="@+id/radbtn_economicType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:button="@null"
+                        android:drawableRight="@drawable/radio_btn"
+                        android:text="@string/news_filter_economic_type"
+                        android:textColor="@color/secb_grey_text"
+                        android:textSize="@dimen/news_filter_text_size" />
+
+                    <RadioButton
+                        android:id="@+id/radbtn_politicalType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:button="@null"
+                        android:drawableRight="@drawable/radio_btn"
+                        android:text="@string/news_filter_political_type"
+                        android:textColor="@color/secb_grey_text"
+                        android:textSize="@dimen/news_filter_text_size" />
+                    <!--android:buttonTint="@color/secb_dark_text"-->
+                    <RadioButton
+                        android:id="@+id/radbtn_publicType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:button="@null"
+                        android:drawableRight="@drawable/radio_btn"
+                        android:text="@string/news_filter_public_type"
+                        android:textColor="@color/secb_grey_text"
+                        android:textSize="@dimen/news_filter_text_size" />
+
+                </RadioGroup>
+            </LinearLayout>
+
+            <!--apply button-->
+
+            <Button
+                android:id="@+id/btn_applyFilter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/news_filter_padding"
+                android:background="@color/secb_orange"
+                android:text="@string/filters_apply_filter"
+                android:textColor="@color/secb_light_text"
+                android:textSize="@dimen/news_filter_btn_text_size" />
 
 
         </LinearLayout>
-
-        <!--types title-->
-        <TextView
-            android:id="@+id/txtv_news_filter_type_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/news_filter_padding"
-            android:text="@string/filter_type"
-            android:textColor="@color/secb_light_text"
-            android:textSize="@dimen/news_filter_btn_text_size"
-            android:textStyle="bold" />
-
-        <!--types input-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="@dimen/news_filter_padding">
-
-            <RadioGroup
-                android:id="@+id/radgro_newsTypes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <RadioButton
-                    android:id="@+id/radbtn_allTypes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_all_types"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="right"
-                    android:button="@null"
-                    android:drawableRight="@drawable/radio_btn"
-                    />
-
-                <RadioButton
-                    android:id="@+id/radbtn_economicType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_economic_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="right"
-                    android:button="@null"
-                    android:drawableRight="@drawable/radio_btn"/>
-
-                <RadioButton
-                    android:id="@+id/radbtn_politicalType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_political_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="right"
-                    android:button="@null"
-                    android:drawableRight="@drawable/radio_btn"/>
-                <!--android:buttonTint="@color/secb_dark_text"-->
-                <RadioButton
-                    android:id="@+id/radbtn_publicType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/news_filter_public_type"
-                    android:textColor="@color/secb_grey_text"
-                    android:layout_gravity="right"
-                    android:button="@null"
-                    android:drawableRight="@drawable/radio_btn"/>
-
-            </RadioGroup>
-        </LinearLayout>
-
-        <!--apply button-->
-
-        <Button
-            android:id="@+id/btn_applyFilter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/news_filter_padding"
-            android:background="@color/secb_orange"
-            android:text="@string/filters_apply_filter"
-            android:textColor="@color/secb_light_text"
-            android:textSize="@dimen/news_filter_btn_text_size" />
+    </ScrollView>
 
 
-    </LinearLayout>
     <!--shadow_h-->
     <View
         android:id="@+id/shadow"
         android:layout_width="fill_parent"
         android:layout_height="2.3dp"
         android:layout_above="@+id/filter_container"
-        android:background="@drawable/shadow_h">
-    </View>
+        android:background="@drawable/shadow_h"></View>
 </RelativeLayout>
