--- a/SECB/app/src/main/res/layout/password_input.xml
+++ b/SECB/app/src/main/res/layout/password_input.xml
@@ -25,6 +25,7 @@
         android:singleLine="true"
         android:text=""
         android:textColor="@color/secb_dark_text"
+        android:inputType="textPassword"
         android:textSize="@dimen/login_input_text_size" />
 </RelativeLayout>
 
