--- a/SECB/app/src/main/res/layout-ar/email_input.xml
+++ b/SECB/app/src/main/res/layout-ar/email_input.xml
@@ -25,5 +25,6 @@
         android:singleLine="true"
         android:text=""
         android:textColor="@color/secb_dark_text"
+        android:gravity="right"
         android:textSize="@dimen/login_input_text_size" />
 </RelativeLayout>
