--- a/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar/locations_filter_screen.xml
@@ -32,8 +32,8 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@drawable/filter_bg"
-            android:orientation="vertical"
             android:clickable="true"
+            android:orientation="vertical"
             android:padding="@dimen/news_filter_padding">
 
 
@@ -92,8 +92,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text=""
                         android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/secb_grey_text"
                         android:textSize="@dimen/news_filter_text_size" />
                     <!--to-->
@@ -137,41 +137,45 @@
                     android:id="@+id/chkbox_type1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/news_filter_all_types"
-                    android:textColor="@color/secb_grey_text"
                     android:layout_gravity="right"
                     android:button="@null"
-                    android:drawableRight="@drawable/check_box" />
+                    android:drawableRight="@drawable/check_box"
+                    android:text="@string/news_filter_all_types"
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
 
                 <CheckBox
                     android:id="@+id/chkbox_type2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/news_filter_economic_type"
-                    android:textColor="@color/secb_grey_text"
                     android:layout_gravity="right"
                     android:button="@null"
-                    android:drawableRight="@drawable/check_box" />
+                    android:drawableRight="@drawable/check_box"
+                    android:text="@string/news_filter_economic_type"
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
 
                 <CheckBox
                     android:id="@+id/chkbox_type3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/news_filter_political_type"
-                    android:textColor="@color/secb_grey_text"
                     android:layout_gravity="right"
                     android:button="@null"
-                    android:drawableRight="@drawable/check_box" />
+                    android:drawableRight="@drawable/check_box"
+                    android:text="@string/news_filter_political_type"
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
                 <!--android:buttonTint="@color/secb_dark_text"-->
                 <CheckBox
                     android:id="@+id/chkbox_type4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/news_filter_public_type"
-                    android:textColor="@color/secb_grey_text"
                     android:layout_gravity="right"
                     android:button="@null"
-                    android:drawableRight="@drawable/check_box" />
+                    android:drawableRight="@drawable/check_box"
+                    android:text="@string/news_filter_public_type"
+                    android:textColor="@color/secb_grey_text"
+                    android:textSize="@dimen/news_filter_text_size" />
             </LinearLayout>
             <!--total capacity title-->
             <TextView
@@ -238,8 +242,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text=""
                         android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/secb_grey_text"
                         android:textSize="@dimen/news_filter_text_size" />
                     <!--to-->
