--- a/SECB/app/src/main/res/values-mdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-mdpi/dimens.xml
@@ -55,9 +55,9 @@
     <dimen name="home_news_recycler_height">110dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">8dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="news_item_card_height">49dp</dimen> <!-- 140PX - HEIGHT -->
-
+    <dimen name="news_list_recycler_heigth">321dp</dimen> <!-- 905PX - HEIGHT -->
     <dimen name="news_filter_padding">13dp</dimen> <!-- 30PX - WIDTH -->
-    <dimen name="news_filter_text_size">7dp</dimen> <!-- 21PX - HEIGHT -->
+    <dimen name="news_filter_text_size">8dp</dimen> <!-- 24PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">10dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="news_details_padding">11dp</dimen> <!-- 33PX - HEIGHT -->
     <dimen name="news_details_img_height">167dp</dimen> <!-- 470PX - HEIGHT -->
