--- a/SECB/app/src/main/res/values-xhdpi/dimens.xml
+++ b/SECB/app/src/main/res/values-xhdpi/dimens.xml
@@ -57,9 +57,10 @@
     <dimen name="home_news_recycler_height">155dp</dimen> <!-- 310PX - HEIGHT -->
     <dimen name="home_news_recycler_items_margin">13dp</dimen> <!-- 25PX - HEIGHT -->
     <dimen name="news_item_card_height">70dp</dimen> <!-- 140PX - HEIGHT -->
+    <dimen name="news_list_recycler_heigth">453dp</dimen> <!-- 905PX - HEIGHT -->
 
     <dimen name="news_filter_padding">15dp</dimen> <!-- 30PX - WIDTH -->
-    <dimen name="news_filter_text_size">11dp</dimen> <!-- 21PX - HEIGHT -->
+    <dimen name="news_filter_text_size">12dp</dimen> <!-- 24PX - HEIGHT -->
     <dimen name="news_filter_btn_text_size">15dp</dimen> <!-- 30PX - HEIGHT -->
     <dimen name="news_details_padding">17dp</dimen> <!-- 33PX - HEIGHT -->
     <dimen name="news_details_img_height">235dp</dimen> <!-- 470PX - HEIGHT -->
